# gdguess

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  README_MPS.md  TRAINING.md  UPGRADE_GUIDE.md  cleanup_project.py  gdguess.py  gdguess_simple.py  inspect_pt.py  inspect_pt_pickle.py  minimal_test.py  minimal_train.py  pyproject.toml  run_transformer_tests.py  test_model_devices.py  test_setup.py  unified_training.py
backup/: gdguess_core.py  implementation_guide.py  minimal_core.py  minimal_test.py  train_simple.py
config/: model_config.yaml
runs/20250320-131621/: events.out.tfevents.1742490981.Mac.11923.0
runs/20250320-131650/: events.out.tfevents.1742491010.Mac.11989.0
script/fetchshows/: fetch_shows.py
script/inference/: inference.py  inferencemic.py
script/snippets/: requirements.txt  snippets.py
script/train/: check_cuda.py  remove-silent.py  remove-too-short.py  requirements.txt  train.py  train_scratch.py
src/: __init__.py  config.py  examine_torch_archive.py  extract_keys.py  infer.py  inference.py  inference_old.py  inspect_pickle.py  inspect_preprocessed.py  main.py  requirements.txt
src/data/: README.md  __init__.py  augmentation.py  create_small_dataset.py  dataset.py  preprocessing.py
src/evaluation/: README.md  __init__.py  evaluate.py  metrics.py
tests/: README.md  create_test_data.py  real_data_test.py  run_all_tests.py  run_tests.py  test_model_structure.py  test_preprocessed_data.py  test_training.py  test_transformer.py  test_transformer_detailed.py  test_transformer_simple.py  test_transformer_with_real_data.py
(+91 files in other folders)
