[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdguess"
version = "0.1.0"
description = "Grateful Dead show dating using deep learning"
authors = [
    {name = "Project Author"}
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "numpy>=1.20.0,<2.0.0",
    "pandas>=1.3.0,<2.0.0",
    "matplotlib>=3.4.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
    "librosa>=0.8.1,<1.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "tensorboard>=2.8.0,<3.0.0",
    "tqdm>=4.62.0,<5.0.0",
    "pillow>=8.3.0,<9.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "flake8>=4.0.0"
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src" 